--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,29 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Navigation
   go_router: ^14.0.2
+  
+  # State Management
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  
+  # HTTP requests for backend API communication
+  http: ^1.1.0
+  
+  # JSON serialization for API data models
+  json_annotation: ^4.8.1
+  
+  # UI
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Code generation for JSON serialization
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
 
   flutter_lints: ^5.0.0
 
