--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   fl_chart: ^0.68.0
 
+  flutter_dotenv: ^5.1.0          
+  flutter_secure_storage: ^9.0.0   
+  shared_preferences: ^2.2.2 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
