--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ lib/generated_plugin_registrant.dart
 # Dependency lock files (keep if you want exact versions)
 pubspec.lock
 .kiro/
+
+.env
 # ----------------------------
 # Android related
 # ----------------------------
