--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
 
   flutter_lints: ^5.0.0
+  provider: ^6.0.5
 
 
 # The following section is specific to Flutter packages.
