--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,16 @@ dependencies:
   # Navigation
   go_router: ^14.0.2
   
-  # State Management
-  flutter_bloc: ^8.1.3
+  # State management
+  flutter_riverpod: ^2.5.1
+  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+
+  # Flutter env 
+  flutter_dotenv: ^5.1.0
+
+  #Flutter SVG
+  flutter_svg: ^2.0.9
   
   # HTTP requests for backend API communication
   http: ^1.1.0
@@ -27,9 +34,7 @@ dependencies:
   
   # UI
   cupertino_icons: ^1.0.8
-  fl_chart: ^0.68.0
-
-  flutter_dotenv: ^5.1.0          
+  fl_chart: ^0.68.0        
   flutter_secure_storage: ^9.0.0   
   shared_preferences: ^2.2.2 
 
@@ -47,16 +52,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
+    - assets/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
