--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: markmeapp
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
-
 
 dependencies:
   flutter:
@@ -14,29 +13,31 @@ dependencies:
 
   # Navigation
   go_router: ^14.0.2
-  
+
+  google_fonts: ^6.2.1
+
   # State management
   flutter_riverpod: ^2.5.1
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
 
-  # Flutter env 
+  # Flutter env
   flutter_dotenv: ^5.1.0
 
   #Flutter SVG
   flutter_svg: ^2.0.9
-  
+
   # HTTP requests for backend API communication
   http: ^1.1.0
-  
+
   # JSON serialization for API data models
   json_annotation: ^4.8.1
-  
+
   # UI
   cupertino_icons: ^1.0.8
-  fl_chart: ^0.68.0        
-  flutter_secure_storage: ^9.0.0   
-  shared_preferences: ^2.2.2 
+  fl_chart: ^0.68.0
+  flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,6 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   provider: ^6.0.5
-
 
 # The following section is specific to Flutter packages.
 flutter:
