--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.2
   intl: ^0.20.2
+  firebase_core: ^4.2.0
+  firebase_messaging: ^16.0.3
 
 dev_dependencies:
   flutter_test:
