--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   device_info_plus: ^12.2.0
   debounce_throttle: ^2.0.0
+  camera: ^0.11.3
 
 dev_dependencies:
   flutter_test:
