--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   device_info_plus: ^12.2.0
   debounce_throttle: ^2.0.0
   camera: ^0.11.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
