--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   debounce_throttle: ^2.0.0
   camera: ^0.11.3
   cached_network_image: ^3.4.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,7 @@ dev_dependencies:
 
   # Code generation for JSON serialization
   build_runner: ^2.4.7
+  hive_generator: ^2.0.1
   json_serializable: ^6.7.1
 
   flutter_lints: ^5.0.0
